--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-blinker==1.9.0
-click==8.3.1
-colorama==0.4.6
 Flask==3.1.2
-flask-cors==6.0.2
+Flask-Cors==6.0.2
 Flask-SQLAlchemy==3.1.1
-greenlet==3.3.1
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.3
-psycopg==3.3.2
-psycopg2==2.9.11
-psycopg2-binary==2.9.11
-python-dotenv==1.2.1
 SQLAlchemy==2.0.46
+
+psycopg[binary]==3.3.2
+
+python-dotenv==1.2.1
+
+Werkzeug==3.1.5
+Jinja2==3.1.6
+itsdangerous==2.2.0
+click==8.3.1
+blinker==1.9.0
+
+greenlet==3.3.1
 typing_extensions==4.15.0
 tzdata==2025.3
-Werkzeug==3.1.5
+colorama==0.4.6
+MarkupSafe==3.0.3
