--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ Flask==3.1.2
 Flask-Cors==6.0.2
 Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.46
-psycopg2
-psycopg[binary]==3.3.2
+psycopg2-binary==2.9.11
 
 python-dotenv==1.2.1
 
