--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask-Cors==6.0.2
 Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.46
 psycopg2-binary==2.9.11
-
+gunicorn==24.1.1
 python-dotenv==1.2.1
 
 Werkzeug==3.1.5
