--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ Jinja2==3.1.6
 itsdangerous==2.2.0
 click==8.3.1
 blinker==1.9.0
-
+sib-api-v3-sdk==7.6.0
 greenlet==3.3.1
 typing_extensions==4.15.0
 tzdata==2025.3
